plugins {
  id 'java'
  id 'application'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(16)
    vendor = JvmVendorSpec.ADOPTOPENJDK
  }
}

test {
  useJUnitPlatform()
}

application {
  mainClass = 'gov.nasa.jpl.aerie.merlin.server.AerieAppDriver'
  applicationDefaultJvmArgs = ['-Xmx2g']
}

dependencies {
  implementation project(':merlin-driver')
  implementation project(':parsing-utilities')
  implementation project(':contrib')
  implementation project(':constraints')

  runtimeOnly project(':merlin-framework')

  implementation 'org.apache.commons:commons-lang3:3.9'
  implementation 'io.javalin:javalin:3.8.0'
  implementation 'org.mongodb:mongodb-driver-sync:3.11.0'
  implementation 'org.slf4j:slf4j-simple:1.7.26'
  implementation 'org.eclipse:yasson:1.0.5'
  implementation 'org.apache.bcel:bcel:6.5.0'

  testImplementation project(':foo-adaptation')
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
  testImplementation 'org.assertj:assertj-core:3.13.2'
  testImplementation 'junit:junit:4.12'
  testImplementation 'javax.json.bind:javax.json.bind-api:1.0'
  testImplementation 'org.glassfish:javax.json:1.1.4'
}
